[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
