[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "=0.7.0-alpha.3", features = ["router", "signals"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
